sonar changes